# entendre-rust

./: Cargo.toml
src/: lib.rs  main.rs  neural_net.rs  neural_net_consecutive.rs
